# mock-ai

./: Cargo.toml  Justfile  pyproject.toml
mockai/models/: json_file.py
mockai/openai/: services.py
py/mockai/: __init__.py
src/: cli.rs  lib.rs  models.rs  server.rs
src/openai/: mod.rs  models.rs  router.rs  services.rs
tests/: conftest.py  responses.json  test_openai.py
tests/unit/openai/: test_openai_services.py
