[project]
name = "mockai"
version = "0.1.0"
description = "Mock clients for your favorite LLM APIs"
readme = "README.md"
authors = [
    { name = "ajac-zero", email = "ajcardoza2000@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10, <4.0"
dependencies = [
    "rich>=14.0.0",
]

[project.optional-dependencies]
openai = ["openai<2.0.0,>=1.59.6"]
anthropic = ["anthropic<1.0.0,>=0.42.0"]
mistralai = ["mistralai<2.0.0,>=1.2.6"]
cohere = ["cohere<6.0.0,>=5.13.6"]

[project.scripts]
mockai = "mockai:serve"

[dependency-groups]
dev = [
  "ruff<1.0.0,>=0.4.9",
  "pytest<9.0.0,>=8.3.4",
  "pytest-sugar<2.0.0,>=1.0.0",
  "pytest-asyncio<1.0.0,>=0.25.2",
  "ipykernel<7.0.0,>=6.29.5",
  "httpx[brotli,http2,zstd]>0.20.0",
  "anyio<5.0.0,>=4.8.0",
  "testcontainers>=4.9.1",
]

[tool.pyright]
"venvPath" = "."
"venv" = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.maturin]
module-name = "mockai._core"
python-packages = ["mockai"]
python-source = "py"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
